--- a/pages/test.mdx
+++ b/pages/test.mdx
@@ -9,3 +9,8 @@ date: 2023-02-07
 This is a test page, I don't ever **really** know what im doing
 
 ---
+
+## Currently Broken Things on this website
+- Code syntax Highlighting
+- The Light theme is **too** Light
+- No accent color?!
