--- a/pages/test.mdx
+++ b/pages/test.mdx
@@ -14,3 +14,4 @@ This is a test page, I don't ever **really** know what im doing
 - Code syntax Highlighting
 - The Light theme is **too** Light
 - No accent color?!
+- inline code has 'these things'
