--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,7 +10,7 @@ I'm a student currently studying Computer Science and Math at Vanier College. I 
 
 Aside from that, I enjoy skiing, sailing and rock climbing when I can. I like music aswell.
 
-This portfolio is built with Next.js and a library called [Nextra](https://nextra.vercel.app/).
+This portfolio is built with Next.js.
 
 ---
 
