--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: page
-title: About Me
+title: About me
 date: 2023-02-07
 ---
 
@@ -10,7 +10,7 @@ I'm a student currently studying Computer Science and Math at Vanier College. I 
 
 Aside from that, I enjoy skiing, sailing and rock climbing when I can. I like music aswell.
 
-This portfolio is built with Next.js.
+This website is built with Next.js.
 
 ---
 
