--- a/pages/posts/fpv.mdx
+++ b/pages/posts/fpv.mdx
@@ -45,7 +45,7 @@ import Image from 'next/image'
 - I’ve been building and flying FPV drones for a couple years now.
 - Here is my most recent one:
 	<Image
-    src="/images/photo2.jpg"
+    src="/images/AOS35.jpg"
     alt="Photo"
     width={1008}
     height={756}
