--- a/pages/posts/fpv.mdx
+++ b/pages/posts/fpv.mdx
@@ -9,10 +9,10 @@ import Image from 'next/image'
 
 # FPV Drones
 
-## What is FPV
+## What is FPV?
 - **FPV** stands for **F**irst **P**erson **V**iew.
 - By streaming real-time video from the camera on the drone, you are flying like a bird! It’s like you are sitting in the cockpit of the aircraft while controlling it, but your feet are actually firmly on the ground.
-- These drones tend to be “full-control”, with the gyroscope on the flight controller only helping keep the drone’s current angular position, rather than keep the drone stationary in space like a “dji mavic” might.
+- These drones tend to be “full control”, with the gyroscope on the flight controller only helping keep the drone’s current angular position, rather than keep the drone stationary in space like a “dji mavic” might.
 	- This allows for flying very fast at extreme angles. Alot of FPV drones can reach 100+km/h!
 - People fly FPV for various reasons the three main being:
 	- Acrobatic flying
@@ -20,10 +20,10 @@ import Image from 'next/image'
 	- Cinematography
 
 ### Acrobatic Flying
-- This is exactly what is sounds like, basically flying for fun
+- This is exactly what it sounds like, basically flying for fun
 - This community of people will come up with impressive tricks and maneuvers they can get their little speedy drone to preform, strap a GoPro onto it and hit record.
 	- It’s very impressive and cool to watch
-	- [Link to one of my Favorite freestyle videos](https://youtu.be/f7YMgfjUfGk)
+	- [Link to one of my Favourite freestyle videos](https://youtu.be/f7YMgfjUfGk)
 
 ### Racing
 - There is entire **leagues** where people compete to see who is the fastest
@@ -34,10 +34,10 @@ import Image from 'next/image'
 
 ### Cinematography
 - Another place where these drones are used is media
-- An FPV drone offers a cool and fast-paced persepective.
+- An FPV drone offers a cool and fast-paced perspective.
 	- [Being used in a skiing video](https://youtu.be/5aqTL6V6JIM)
 	- [Being used in a Porsche ad](https://youtu.be/1U2aVQDbJ3o)
-- Often a GoPro isnt enough for these types of FPV drones, so bigger cameras are required, needing more bigger motors, speed controllers and sometimes advanced digital video transmition system aswell, all offering new technical challenges.
+- Often a GoPro isn't enough for these types of FPV drones, so bigger cameras are required, needing more bigger motors, speed controllers and sometimes advanced digital video transmission system as well, all offering new technical challenges.
 
 ---
 
@@ -57,14 +57,14 @@ import Image from 'next/image'
 - This drone is made up of a couple parts
 - The AIO
 	- *Foxeer Reaper AIO V2*
-	- unlike most FPV builds, the flight controller and speed controllers are all on this one board (**a**ll **i**n **o**ne), making the assembly and durability of this build way better.
+	- Unlike most FPV builds, the flight controller and speed controllers are all on this one board (**a**ll **i**n **o**ne), making the assembly and durability of this build way better.
 	- The flight controller runs [betaflight](https://betaflight.com/) firmware, which handles the PID loops, controls and on-screen display.
 - The Camera and VTX
 	- This build uses analog video, which transfers video to the goggles over a 5.8ghz radio connection.
-	- The camera is a *Caddx Ratel 2*, a camera good for low-light
+	- The camera is a *Caddx Ratel 2*, a camera good for lowlight
 	- The VTX (Video Transmitter) is the *RUSH Tank Solo*, which is ~1.6W powerful.
 - The R/C connection
-	- The system being used is *TBS Crossfire*, with it’s nano receiver
+	- The system being used is *TBS Crossfire*, with its nano receiver
 		- it is a true and tested 900mhz system
 - Motors and Propellers
 	- The motors are *FPV Cycle 21mm Motors*
@@ -73,10 +73,12 @@ import Image from 'next/image'
 		- The “20” stands for the pitch which is 2”.
 - The frame
 	- The frame is the *AOS 3.5*
-		- This carbon fiber frame is designed for 3.5 inch propellers, and features a really cool looking arms which help resonant properties 
+		- This carbon fibre frame is designed for 3.5 inch propellers, and features really cool looking arms which have good resonant properties 
 - Other
 	- Not present in the picture above, but I have also recently designed and 3D printed some more parts:
-		- Guards for ends of the arms to prevent splitering in crashes
+		- Guards for ends of the arms to prevent splitting in crashes
 		- An antenna holder to get a better angle
 		- A mount for my new [Caddx Peanut](https://caddxfpv.com/products/caddx-peanut-action-camera)
 			- An alternative to a GoPro since this drone is too small to carry a full-sized action camera.
+
+> A video compiling some clips *should* be added
