--- a/pages/posts/fpv.mdx
+++ b/pages/posts/fpv.mdx
@@ -60,7 +60,7 @@ import Image from 'next/image'
 	- Unlike most FPV builds, the flight controller and speed controllers are all on this one board (**a**ll **i**n **o**ne), making the assembly and durability of this build way better.
 	- The flight controller runs [betaflight](https://betaflight.com/) firmware, which handles the PID loops, controls and on-screen display.
 - The Camera and VTX
-	- This build uses analog video, which transfers video to the goggles over a 5.8ghz radio connection.
+	- This build uses analog video, which transfers video to the video feed goggles over a 5.8ghz radio connection.
 	- The camera is a *Caddx Ratel 2*, a camera good for lowlight
 	- The VTX (Video Transmitter) is the *RUSH Tank Solo*, which is ~1.6W powerful.
 - The R/C connection
