--- a/pages/posts/fpv.mdx
+++ b/pages/posts/fpv.mdx
@@ -2,7 +2,7 @@
 title: FPV Drones
 date: 2023-02-09
 description: A little bit about drone stuff.
-tag: Drone, Project
+tag: Drone, Projects
 author: Marcus Lee
 ---
 import Image from 'next/image'
