--- a/pages/posts/3d.mdx
+++ b/pages/posts/3d.mdx
@@ -10,7 +10,7 @@ author: Marcus Lee
 
 This is me trying out [react three fiber](https://github.com/pmndrs/react-three-fiber), a react renderer for [three.js](https://threejs.org/)
 
-import { useState, useTransition } from 'react'
+import { useState, useTransition, React } from 'react'
 import { Canvas } from '@react-three/fiber'
 import {
   AccumulativeShadows,
