--- a/pages/test.mdx
+++ b/pages/test.mdx
@@ -6,7 +6,17 @@ date: 2023-02-07
 
 # Test Page
 
-<marquee>:)</marquee>
+---
+
+  <div class="newtons-cradle">
+    <div class="newtons-cradle__dot"></div>
+    <div class="newtons-cradle__dot"></div>
+    <div class="newtons-cradle__dot"></div>
+    <div class="newtons-cradle__dot"></div>
+  </div>
+---
+
+{/* <marquee>:)</marquee>
 
 ---
 
@@ -14,4 +24,4 @@ date: 2023-02-07
 - Code syntax Highlighting
 - The Light theme is **too** Light
 - No accent color?!
-- inline code has 'these things'
+- inline code has 'these things' */}
