--- a/pages/posts/satellite.mdx
+++ b/pages/posts/satellite.mdx
@@ -56,6 +56,6 @@ This is where the project really slowed down. basic physics are incomperated int
     />
 
 ## Future (Maybe)
-If I get around to it, I’d like to implement the missing physics and flesh it out in term of “being a game”.  Currently it sits more as a demo with no objective or gameplay.
+If I get around to it, I’d like to implement the missing physics and flesh it out in terms of “being a game”.  Currently it sits more as a demo with no objective or gameplay.
 
 [Satellite Github Repository](https://github.com/GodPuffin/Satellite)
