Typos and stuff

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -8,9 +8,7 @@ date: 2023-02-07
 
 I'm a student currently studying Computer Science and Math at Vanier College. I enjoy working across the full spectrum of mechanical, electrical, and software engineering through various projects with goal of learning and progressing my skills. Alot of my experience comes from my time on my highschool robotics team, as team captain and lead programmer.
 
-Aside from that, I enjoy skiing, sailing and rock climbing when I can. I like music aswell.
-
-This website is built with Next.js.
+Aside from that, I enjoy skiing, sailing and rock climbing when I can. I like music and photography aswell.
 
 ---
 
