--- a/pages/test.mdx
+++ b/pages/test.mdx
@@ -9,10 +9,10 @@ date: 2023-02-07
 ---
 
   <div class="newtons-cradle">
-    <div class="newtons-cradle__dot"></div>
-    <div class="newtons-cradle__dot"></div>
-    <div class="newtons-cradle__dot"></div>
-    <div class="newtons-cradle__dot"></div>
+    <div class="newtons-cradle__dot"/>
+    <div class="newtons-cradle__dot"/>
+    <div class="newtons-cradle__dot"/>
+    <div class="newtons-cradle__dot"/>
   </div>
 ---
 
