--- a/pages/posts/satellite.mdx
+++ b/pages/posts/satellite.mdx
@@ -16,7 +16,7 @@ This is again really just a learner project, allowing me to experiment with new 
 I built Satellite with a XNA framework called [Monogame](https://www.monogame.net/).
 
 ## Particles
-Satellite features a particles system, generating the stars and the thrust effect behind the ships. The particle emitter is able to keep track of the age of each particle, allowing to change size, rotation, opacicity and anything else about the particles as they age. 
+Satellite features a particles system, generating the stars and the thrust effect behind the ships. The particle emitter is able to keep track of the age of each particle, allowing to change size, rotation, opacity and anything else about the particles as they age. 
 
 Here are the 2 ships and their respective effects:
 
