--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -14,4 +14,4 @@ Aside from that, I enjoy skiing, sailing and rock climbing when I can. I like mu
 
 - GitHub [@godpuffin](https://github.com/GodPuffin)
 - Instagram [@marcus.lee._](https://www.instagram.com/marcus.lee._/)
-
+- Linkedin [Marcus Lee](https://www.linkedin.com/in/marcus-lee-3b5298264)
