--- a/pages/posts/fpv.mdx
+++ b/pages/posts/fpv.mdx
@@ -2,7 +2,7 @@
 title: FPV Drones
 date: 2023-02-09
 description: A little bit about drone stuff.
-tag: Drone, Projects
+tag: Projects
 author: Marcus Lee
 ---
 import Image from 'next/image'
@@ -81,4 +81,14 @@ import Image from 'next/image'
 		- A mount for my new [Caddx Peanut](https://caddxfpv.com/products/caddx-peanut-action-camera)
 			- An alternative to a GoPro since this drone is too small to carry a full-sized action camera.
 
-> A video compiling some clips *should* be added
+## Video
+<video
+    src="/videos/fpv.mp4"
+    controls
+    loop
+    muted
+    autoplay
+    width={1920}
+    height={1080}
+    className="next-video"
+    />
