--- a/pages/posts/pharmahacks.mdx
+++ b/pages/posts/pharmahacks.mdx
@@ -9,7 +9,7 @@ import Image from 'next/image'
 
 # Pharmahacks 2024
 
-I recently participated at the Pharmahacks 2024 hackathon. I was part of a team of 5 that tackled the neural decoding challenge. You can read about it in our [github repository](https://github.com/GodPuffin/Pharmahacks2024)'s readme. I wanted to use this post to document my experience and the code I wrote.
+I recently participated at the [Pharmahacks 2024](https://pharmahacks.com/) hackathon. I was part of a team of 5 that tackled the neural decoding challenge. You can read about it in our [github repository](https://github.com/GodPuffin/Pharmahacks2024)'s readme. I wanted to use this post to document my experience and the code I wrote.
 
 ## Problem Approach
 
