--- a/pages/posts/swerve.mdx
+++ b/pages/posts/swerve.mdx
@@ -2,7 +2,7 @@
 title:  Offseason Swerve Drive
 date: 2024-02-04
 description: A offseason swerve drive mini bot built for team 296.
-tag: Programming, Projects
+tag: Programming, Projects, Robotics
 author: Marcus Lee
 ---
 import Image from 'next/image'
