--- a/pages/posts/frc2024.md
+++ b/pages/posts/frc2024.md
@@ -38,7 +38,7 @@ The build is focused around the 4 swerve modules and 2 x 1 aluminum bar stock. T
 
 Bilbo has odometry and a vision system. The odometry is used to track the robot's position on the field, allowing us to accurately navigate and score points. The vision system is used to detect targets, ensuring that we can aim and shoot accurately. The use of these systems, along with the swerve drive, allows us to have great autonomous periods and precise control during teleop. These automations also allowed us to have a single driver vs the traditional two.
 
-The odometry is tracked using a [REV Through Bore Encoder](https://www.revrobotics.com/rev-11-1271/), which is mounted on the swerve module. The vision system uses a [Limelight](https://limelightvision.io/), which is mounted on the shooter mechanism. Lastly our autos are controlled by [PathPlanner](https://pathplanner.dev/), which is a open-source library that allows us to create complex paths for our robot to follow.
+The odometry is tracked using the swerve modules' encoders. The vision system uses a [Limelight](https://limelightvision.io/), which is mounted on the shooter mechanism. Lastly our autos are controlled by [PathPlanner](https://pathplanner.dev/), which is a open-source library that allows us to create complex paths for our robot to follow.
 
 ## Scouting
 
