--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,12 +6,12 @@ date: 2023-02-07
 
 ## Hello! 👋, I'm Marcus
 
-I'm a student currently studying Computer Science and Math at Vanier College. I enjoy working across the full spectrum of mechanical, electrical, and software engineering through various projects with goal of learning and progressing my skills. A lot of my experience comes from my time on my highschool robotics team, as team captain and lead programmer.
+I'm a student currently studying Computer Engineering @ the University British Columbia. I've just finish my DEC in Computer Science and Math at Vanier College. I enjoy working across the full spectrum of mechanical, electrical, and software engineering through various projects with goal of learning and progressing my skills. My recent interest mainly pertains to creating AI tools that fit seamlessly into everyday life.
 
-Aside from that, I enjoy skiing, sailing and rock climbing when I can. I like music and photography aswell.
+Aside from that, I enjoy skiing, sailing and rock climbing when I can.
 
 ---
 
 - GitHub [@godpuffin](https://github.com/GodPuffin)
 - Instagram [@marcus.lee._](https://www.instagram.com/marcus.lee._/)
-- Linkedin [Marcus Lee](https://www.linkedin.com/in/marcus-lee-3b5298264)
+- Linkedin [Marcus Lee](https://www.linkedin.com/in/marcus-m-lee)
